--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.5.2",
+    "@docusaurus/plugin-client-redirects": "^3.5.2",
     "@docusaurus/plugin-content-docs": "^3.5.2",
     "@docusaurus/tsconfig": "3.5.2",
     "@docusaurus/types": "3.5.2",
